syntax = "proto3";

package auth;

service AuthService {
  rpc GGLogin(GGLoginRequest) returns (GGLoginResponse);
  rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse);
}

message User {
  string id = 1;
  string email = 2;
  bool isAdmin = 3;
}

message GGLoginRequest {
  string code = 1;
}

message GGLoginResponse {
  string accessToken = 1;
  User user = 2;
}

message AdminLoginRequest {
  string email = 1;
  string password = 2;
}

message AdminLoginResponse {
  string accessToken = 1;
  User user = 2;
}