syntax = "proto3";

package shop;

service ShopService {
    rpc CreateShop(CreateShopRequest) returns (Shop);
    rpc GetShopMemberRole(GetShopMemberRoleRequest) returns (ShopMember);
}

message User {
  string id = 1;
  string email = 2;
  bool isAdmin = 3;
}

message Shop {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string description = 5;
}

message CreateShopRequest {
    Shop shop = 1;
    User user = 2;
}

message GetShopMemberRoleRequest {
    string userId = 1;
    string shopId = 2;
}

message ShopMember {
    string role = 1;
}


